Added junit as maven dependency.